# solaura

./: README.md
backend/: Cargo.toml  constants.json  response.json
backend/src/: main.rs
smart_contract/programs/allllast/src/: lib.rs
solaura_ui/: README.md  package-lock.json  package.json
solaura_ui/src/app/: globals.css  layout.tsx  page.tsx
solaura_ui/src/components/: analysisCard.tsx  header.tsx  mock_response.json  themeSwitcher.tsx  wallet-analyzer.tsx
solaura_ui/src/idl/: anchor-example.json  anchor_example_v2.json
