[package]
name = "solaura"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.1.2"
solana-sdk = "2.1.2"
reqwest = "0.12.9"
tokio = "1.41.1"
serde_json = "1.0.133"
warp = "0.3.7"
serde = "1.0.215"
base58 = "0.2.0"
solana-transaction-status-client-types = "2.1.2"
spl-token = "7.0.0"
chrono = "0.4.38"